feat: optimize log acquisition thread pool and add new features